# steam-vpk-server

./: .gitignore  README.md  meson.build  meson_options.txt  package.json  tsconfig.json
build-aux/: com.github.kinten108101.SteamVPK.Server.yml  generated-sources.json
data/: meson.build  resource.gschema.xml  server.desktop.in  server.service.in
src/: add-addon.ts  addon-storage.ts  addons.ts  archiver.ts  const.ts  disk-capacity.ts  downloader.ts  file.ts  gvariant.d.ts  index-dir.ts  index.js  injector.ts  loadorder-resolver.ts  main.ts  meson.build  models.ts  profile.ts  promisify.ts  resource.src.gresource.xml.in  server.ts  settings.ts  simple-inv.ts  steam-api.ts  utils.ts
src/binders/: addon-directory.ts  disk-capacity.ts
src/exports/: addons.ts  apicache.ts  disk.ts  injector.ts  profiles.ts  requestapi.ts  settings.ts  workshop.ts
src/models/: addon-storage.ts  addon-store.ts  addons.ts  api-cache.ts  archive-store.ts  archives.ts  download-queue.ts  injection-store.ts  profile-store.ts  profile.ts  serializer-store.ts
src/services/: addons.ts  archiver.ts  dbus-service.ts  directory.ts  disk-capacity.ts  disk.ts  download-order.ts  injection.ts  injector.ts  manifest-reader.ts  serializers.d.ts  service.ts  settings-writer.ts  settings.ts  steam-api.ts  workshop.ts
src/services/backends/: addons.ts
src/services/directory/: index-dir.ts
src/services/errors/: addon-store.ts  archiver.ts  id.ts  steam-api.ts
src/services/id/: workshop.ts
src/services/schema/: addon-manifest.d.ts  archive-manifest.ts  index-dir.d.ts  steam-api.d.ts  steam-vpk-server.d.ts
src/services/serializers/deserializer/: addon.ts  archive.ts  gpfd-addon.ts  gpfd-archive.ts  shared.ts
src/services/serializers/serializer/: addon-manifest.ts  get-addon-response.ts
test/: index.js
test/src/: main.ts  utils.ts
test/src/units/: addon-store.ts  disk-capacity-interval.ts  disk-capacity.ts
